docs/suspensive.org/src/app/[lang]/styles.css
@import 'tailwindcss';
@import 'nextra-theme-docs/style.css';

.scrollbar-none {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.scrollbar-none::-webkit-scrollbar {
  display: none; /* Chrome, Safari, Opera*/
}

:lang(ko) {
  word-break: keep-all;
  word-wrap: break-word;
}

body {
  @apply bg-white text-black transition-colors duration-300;
}

.dark body {
  @apply bg-black text-white;
}

.homepage-content {
  @apply bg-white text-black transition-colors duration-300;
}

.dark .homepage-content {
  @apply bg-black text-white transition-colors;
}

pre {
  @apply rounded-lg bg-zinc-900;
}

/* pre always has a dark background, so ensure the copy button icon is visible in both light and dark modes */
pre button {
  @apply text-gray-400 hover:text-gray-100;
}

.dark pre {
  @apply border-gray-900 bg-inherit;
}

.dark code {
  @apply border-gray-900;
}

.a {
  @apply text-blue-400 hover:text-blue-300;
}

.nextra-nav-container {
  @apply border-gray-200 bg-white;
}

.nextra-sidebar {
  @apply bg-white;
}

.dark .nextra-nav-container {
  @apply border-gray-700 bg-gray-900;
}

.dark .nextra-sidebar {
  @apply bg-black;
}

